--- a/app/views/stops/_edit.html.haml
+++ b/app/views/stops/_edit.html.haml
@@ -42,7 +42,7 @@
   .form-group.mb-1
     =  bootstrap_form_for stop, url: stop_path, method: :patch, remote: true do |f|
       %label{ for: 'active_status' }
-        Status
+        = t('stops.mobile.status')
       .input-group.col-xs-12
         #radiobtn
           .d-flex.align-items-center.justify-content-between{ style: 'width: 100%'}
@@ -63,3 +63,14 @@
         = f.hidden_field :status_updated_at, { name: 'stop[status_updated_at]', id: 'active_status_updated_at' }
         = f.hidden_field :status, { name: 'stop[status]', id: 'active_status', onchange: "this.form.submit()" }
         = f.hidden_field :id, { name: 'stop_id' }
+      %label
+        = t('stops.mobile.form')
+      - custom_attributes.each do |custom_attribute|
+        .custom_field.d-flex.align-items-center.justify-content-left.mb-1.row
+          %label{class: custom_attribute.object_type == 'boolean' ? 'col-xs-8' : 'col-xs-12' }
+            = custom_attribute.name
+          .field.mb-0{class: custom_attribute.object_type == 'boolean' ? 'col-xs-4' : 'col-xs-12' }
+            = custom_attribute_form_field(f, stop, custom_attribute)
+          .col-xs-12
+            %p.help-block
+              = custom_attribute.description
