--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -272,7 +272,7 @@
                           = t 'customers.menu.customer'
                       %li
                         = link_to custom_attributes_path do
-                          %i.fa.fa-file-lines
+                          %i.fa.fa-file-lines.fa-fw
                           = t 'custom_attributes.menu.custom_attributes'
 
                     %li
