--- a/app/views/custom_attributes/_default_value.html.haml
+++ b/app/views/custom_attributes/_default_value.html.haml
@@ -1,12 +1,12 @@
 .row
   %label.col-form-label.col-md-offset-2.col-md-7
-    = t 'activerecord.attributes.custom_attribute.default_value'
+    = t "custom_attributes.form.default_value.#{object_type}"
   - case typed_default_value
   - when Array
     %ul#default_list.col-md-offset-2.col-md-8.mb-0
       - typed_default_value.each.with_index do |value, index|
         .default-value-row.input-group{ id: "row_#{index}" }
-          = text_field_tag 'custom_attribute[default_value][]', value, class: 'form-control'
+          = text_field_tag 'custom_attribute[default_value][]', value, class: 'form-control', required: 'true'
           %a.input-group-addon.btn.btn-danger.btn-sm.btn-remove{ id: "delete_#{index}" }
             %i.fa.fa-trash.fa-fw
             = t 'all.verb.destroy'
