--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -828,20 +828,13 @@ input.form-control.number-of-days {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 1rem;
 }
 
 .menu-left .logo {
   display: block;
-  width: 40px;
-  height: 40px;
   transition: $transition-duration $transition-timing-curve;
 }
-
-.menu-left.open .logo {
-  width: 140px;
-  height: 40px;
-}
-
 .menu-left .logo > img {
   width: 100%;
   height: 100%;
@@ -912,6 +905,26 @@ input.form-control.number-of-days {
 
 .menu-left.open {
   width: 250px;
+
+  .logo-large {
+    width: 80%;
+    min-width: 140px;
+  }
+
+  .logo-small {
+    display: none;
+  }
+}
+
+.menu-left:not(.open) {
+  .logo-large {
+    display: none;
+  }
+
+  .logo-small {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 
