--- a/app/views/shared/_check_box.html.haml
+++ b/app/views/shared/_check_box.html.haml
@@ -1,5 +1,5 @@
 - form ||= nil
-- options = { help_label_class: 'col-md-offset-2 col-md-7', label_class: 'col-md-offset-2 col-md-7 hidden', label_col: 'col-md-offset-2 col-md-6', control_col: 'form-switch col-md-2', check_box_class: 'form-check-input' }.merge(options || {})
+- options = { help_label_class: 'col-md-offset-2 col-md-7', label_class: 'col-md-offset-2 col-md-7 hidden', label_col: 'col-md-offset-2 col-md-6', control_col: 'form-switch col-md-offset-2 col-md-6', check_box_class: 'form-check-input' }.merge(options || {})
 - if form
   - if local_assigns.key? :field
     = form.form_group field, { label: { text: label }, style: ('margin-bottom: 0 !important;' if local_assigns.key?(:help)) }.merge(options).merge(control_col: 'form-switch') do
@@ -13,6 +13,6 @@
   .form-check
     %input{ name: name, value: "false", type: "hidden" }
     = check_box_tag name, 1, checked, options.merge(class: options[:check_box_class])
-- if local_assigns.key? :help
-  %p.check-box.help-block{ class: options[:help_label_class] }
+- if local_assigns[:help]
+  %small.form-text.text-muted.check-box.help-block{ class: options[:help_label_class] }
     = help
