--- a/app/views/shared/_check_box.html.haml
+++ b/app/views/shared/_check_box.html.haml
@@ -2,8 +2,8 @@
 - options = { help_label_class: 'col-md-offset-2 col-md-7', label_class: 'col-md-offset-2 col-md-7 hidden', label_col: 'col-md-offset-2 col-md-6', control_col: 'form-switch col-md-offset-2 col-md-6', check_box_class: 'form-check-input' }.merge(options || {})
 - if form
   - if local_assigns.key? :field
-    = form.form_group field, { label: { text: label }, style: ('margin-bottom: 0 !important;' if local_assigns.key?(:help)) }.merge(options).merge(control_col: 'form-switch') do
-      = local_assigns[:form].check_box field, { label: '' }.merge(options)
+    = form.form_group field, { label: { text: label }, style: ('margin-bottom: 0 !important;' if local_assigns.key?(:help)) }.merge(options) do
+      = form.check_box field, { label: '' }.merge(options).merge(layout: :vertical)
   - else
     = form.form_group label, { label: { text: label }, style: ('margin-bottom: 0 !important;' if local_assigns.key?(:help)) }.merge(options) do
       .form-check
