Fix logo display

--- a/app/assets/stylesheets/stops.css.scss
+++ b/app/assets/stylesheets/stops.css.scss
@@ -14,7 +14,8 @@
     color: $white;
 
     .company-logo {
-      height: calc(#{$mobile-header-height} - 8px);
+      max-height: calc(#{$mobile-header-height} - 8px);
+      width: 100%;
     }
 
     .form-check-input {
